# CyberpunK-manim

./: .gitignore  README.md  pyproject.toml  requirement.txt
CyberpunK_manim/: __init__.py  __main__.py  convert.py  insert.py  pptx_slide_create.py  render_manim.py  theme.py
CyberpunK_manim/theme/: test_python-pptx.py
basic_example/: example.py
example/: animation.py  example.ipynb  example.py
theme/: CyberpunK-theme.pptx
tools/: convert.py
